Need to fix the shadow on the dots for hover and the alignment. Also need to add the icons to the search bar and icon below bar.

--- a/funCSS/searchLayoutFun.css
+++ b/funCSS/searchLayoutFun.css
@@ -12,7 +12,6 @@
 body {
     background-color: #35363a;
     margin: 0;
-    min-height: 100%;
 }
 
 .wrapper {
@@ -33,6 +32,13 @@ body {
 .glinks > a {
     font-family: "Roboto", sans-serif;
     color: white;
+}
+
+.glinks > a:last-child:hover {
+    border-radius: 40px;
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5),
+    0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .shortcut > span {
@@ -63,9 +69,48 @@ a {
 
 main {
     display: flex;
-    justify-content: center;
-    
+    flex-direction: column;
+    align-items: center;
+    outline: 1px solid red;
+    margin-top: 15%;
 }
+
+.searchContainer {
+    display: flex;
+    flex-direction: row;
+    padding-top: 25px;
+}
+
+.shortcut {
+    padding-top: 100px;
+}
+
+.searchContainer > svg {
+    height: 24px;
+    width: 24px;
+}
+
+.searchContainer > svg path {
+    fill: black;
+}
+
+
+#search {
+    color: black;
+    font-family: inherit;
+    border: none;
+    border-radius: 44px;
+    width: 500px;
+    height: 40px;
+    text-align: center;
+}
+
+
+img {
+    max-width: 100%;
+}
+
+
 
 .footLink > .pencil {
     height: 1rem;
@@ -78,15 +123,16 @@ main {
 
 
 footer {
-    
     display: flex;
     text-align: center;
     justify-content: flex-end;
     overflow: hidden;
     outline: 1px solid red;
+    /*
     margin-top: 100%;
     margin-left: 50%;
-    
+    */
+    padding-top: 15%;
 }
 
 footer a {
@@ -104,6 +150,7 @@ footer a {
     min-width: 2rem;
     justify-content: center;
     background-color: black;
+    
 }
 
 
@@ -115,7 +162,6 @@ footer a {
 
 .footLink:hover {
     background-color: rgba(138, 180, 248, .08);
-
     cursor: pointer;
 }
 
